Update: Buy Medicine JS/Html Fix: Sidebar BuyBtn spacing Update: Oder Histroy Text

--- a/css/user.css
+++ b/css/user.css
@@ -790,3 +790,7 @@ body {
     padding: 0.75rem;
   }
 }
+
+.d-none {
+  display: none !important;
+}
